<?xml version="1.0" encoding="UTF-8"?><project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>commons-pool</groupId>
  <artifactId>commons-pool</artifactId>
  <name>Commons Pool</name>
  <version>1.3.1-heritrix-1.14.2-webcuratortool-2.0.1</version>
  <description>Commons Object Pooling Library</description>
  <url>http://jakarta.apache.org/commons/${pom.artifactId.substring(8)}/</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <issueManagement>
    <url>http://issues.apache.org/bugzilla/</url>
  </issueManagement>
  <ciManagement>
    <notifiers>
      <notifier>
        <configuration>
          <address>commons-dev@jakarta.apache.org</address>
        </configuration>
      </notifier>
    </notifiers>
  </ciManagement>
  <inceptionYear>2001</inceptionYear>
  <mailingLists>
    <mailingList>
      <name>Commons Dev List</name>
      <subscribe>commons-dev-subscribe@jakarta.apache.org</subscribe>
      <unsubscribe>commons-dev-unsubscribe@jakarta.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/eyebrowse/SummarizeList?listName=commons-dev@jakarta.apache.org</archive>
    </mailingList>
    <mailingList>
      <name>Commons User List</name>
      <subscribe>commons-user-subscribe@jakarta.apache.org</subscribe>
      <unsubscribe>commons-user-unsubscribe@jakarta.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/eyebrowse/SummarizeList?listName=commons-user@jakarta.apache.org</archive>
    </mailingList>
  </mailingLists>
  <developers>
    <developer>
      <id>morgand</id>
      <name>Morgan Delagrange</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>geirm</id>
      <name>Geir Magnusson</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>craigmcc</id>
      <name>Craig McClanahan</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>rwaldhoff</id>
      <name>Rodney Waldhoff</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>dweinr1</id>
      <name>David Weinrich</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>dirkv</id>
      <name>Dirk Verbeeck</name>
      <email></email>
      <organization></organization>
    </developer>
    <developer>
      <id>rdonkin</id>
      <name>Robert Burrell Donkin</name>
      <email></email>
      <organization>Apache Software Foundation</organization>
    </developer>
    <developer>
      <id>sandymac</id>
      <name>Sandy McArthur</name>
      <email></email>
      <organization>Apache Software Foundation</organization>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Todd Carmichael</name>
      <email>toddc@concur.com</email>
    </contributor>
  </contributors>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>/LICENSE.txt</url>
    </license>
  </licenses>
  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/commons/proper/${pom.artifactId.substring(8)}/trunk</connection>
    <url>http://svn.apache.org/repos/asf/jakarta/commons/proper/${pom.artifactId.substring(8)}/trunk</url>
  </scm>
  <organization>
    <name>The Apache Software Foundation</name>
    <url>http://jakarta.apache.org</url>
  </organization>
  <build>
    <sourceDirectory>src/java</sourceDirectory>
    <testSourceDirectory>src/test</testSourceDirectory>
    <resources>
      <resource>
        <targetPath>META-INF</targetPath>
        <directory>${basedir}</directory>
        <includes>
          <include>LICENSE.txt</include>
          <include>NOTICE.txt</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
	<version>3.0.0-M4</version>
        <configuration>
          <includes>
            <include>org/apache/commons/pool/Test*Factory.java</include>
            <include>org/apache/commons/pool/TestBaseObjectPool.java</include>
            <include>org/apache/commons/pool/TestBaseKeyedObjectPool.java</include>
            <include>org/apache/commons/pool/TestPoolUtils.java</include>
            <include>org/apache/commons/pool/impl/Test*Pool.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
	<version>3.8.1</version>
        <configuration>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
	  <compilerArgument>-Xlint:unchecked</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-plugin-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <comment>&lt;strong>Site Only&lt;/strong> - v1.7 (minimum)</comment>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-scm-plugin</artifactId>
        <version>1.5</version>
        <configuration>
          <comment>&lt;strong>Site Only&lt;/strong> - v1.5 (minimum)</comment>
        </configuration>
      </plugin>
      <!-- The maven jdiff plugin doesn't appear to be available from any repository.
           It doesn't appear to be critical for the build.
      <plugin>
        <artifactId>maven-jdiff-plugin</artifactId>
        <version>1.5</version>
        <configuration>
          <comment>&lt;strong>Site Only&lt;/strong> - v1.5 (minimum)</comment>
        </configuration>
      </plugin>
    -->
      <plugin>
        <artifactId>maven-changes-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <comment>&lt;strong>Site Only&lt;/strong> - v1.6 (minimum)</comment>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <distributionManagement>
    <repository>
      <id>default</id>
      <name>Default Repository</name>
      <url>file:///www/jakarta.apache.org/builds/jakarta-commons/${pom.artifactId.substring(8)}/</url>
    </repository>
    <site>
      <id>default</id>
      <name>Default Site</name>
      <url>scp://jakarta.apache.org//www/jakarta.apache.org/commons/${pom.artifactId.substring(8)}/</url>
    </site>
    <!-- [ERROR] 'distributionManagement.status' must not be specified.
    <status>converted</status>
    -->
  </distributionManagement>
</project>
